# jude-btc-swap

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  bors.toml
docs/asb/: README.md
docs/asb/diagrams/: cli-asb-components-asb-pub-nodes.puml  cli-asb-components-asb-self-hosted.puml
docs/cli/: README.md  discover_and_take.sh
judecoin-harness/: Cargo.toml
judecoin-harness/src/: image.rs  lib.rs
judecoin-harness/tests/: judecoin.rs  wallet.rs
judecoin-rpc/: Cargo.toml
judecoin-rpc/src/: judecoin.rs  lib.rs  wallet.rs
judecoin-wallet/: Cargo.toml
judecoin-wallet/src/: lib.rs
swap/: Cargo.toml  sqlx-data.json
swap/migrations/: 20210903050345_create_swaps_table.sql
swap/src/: bitcoin.rs  env.rs  fs.rs  judecoin.rs  judecoin_ext.rs  kraken.rs  lib.rs  protocol.rs
swap/src/asb/: command.rs  config.rs  event_loop.rs  network.rs  rate.rs
swap/src/bitcoin/: refund.rs
swap/src/cli/: behaviour.rs  command.rs  event_loop.rs
swap/src/database/: alice.rs  bob.rs  sqlite.rs
swap/src/judecoin/: wallet.rs  wallet_rpc.rs
swap/src/network/: encrypted_signature.rs  quote.rs  rendezvous.rs  (+2 more)
swap/tests/: alice_and_bob_refund_using_cancel_and_refund_command.rs  alice_and_bob_refund_using_cancel_and_refund_command_timelock_not_expired.rs  alice_manually_punishes_after_bob_dead.rs  alice_punishes_after_restart_bob_dead.rs  alice_refunds_after_restart_bob_refunded.rs  concurrent_bobs_after_xmr_lock_proof_sent.rs  concurrent_bobs_before_xmr_lock_proof_sent.rs  happy_path_restart_alice_after_xmr_locked.rs  happy_path_restart_bob_before_xmr_locked.rs
(+11 files in other folders)
