[package]
name = "judecoin-wallet"
version = "0.1.0"
authors = [ "CoBloX Team <team@coblox.tech>" ]
edition = "2018"

[dependencies]
anyhow = "1"
judecoin = "0.12"
judecoin-rpc = { path = "../judecoin-rpc" }
rand = "0.7"

[dev-dependencies]
curve25519-dalek = "3"
judecoin-harness = { path = "../judecoin-harness" }
rand = "0.7"
testcontainers = "0.12"
tokio = { version = "1", features = [ "rt-multi-thread", "time", "macros", "sync", "process", "fs" ] }
tracing-subscriber = { version = "0.2", default-features = false, features = [ "fmt", "ansi", "env-filter", "chrono", "tracing-log" ] }
